--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@devindex/vue-mask": "^2.0.3",
     "@primevue/themes": "^4.0.5",
     "pinia": "^2.1.7",
     "primevue": "^4.0.5",
